# lambdamail

./: CMakeLists.txt  README.md  check_inbox_with_curl  check_inbox_with_curl.cpp  check_inbxox_with_curl.cpp  environment.yml  get_domain  get_domain.cpp  register_email  register_email.cpp  setup.sh
bruno/: bruno.json  createaccount.bru  getdomain.bru  getinbox.bru  gettoken.bru
docs/source/: conf.py  index.rst
include/: CurlWrapper.h  EmailClientGUI.h  MailTM.h
src/: CMakeLists.txt  CurlWrapper.cpp  EmailClientGUI.cpp  MailTM.cpp  check_inbox.cpp  get_domain.cpp  main.cpp  register_email.cpp
tests/: CMakeLists.txt  mail_tm_tests.cpp
